# src/api/users/auth/controller.js
@@ -4,21 +4,57 @@ const jwt = require("jsonwebtoken");
 const userModel = require("./model");
 
 exports.signup = async (req, res) => {
-  const { userinfo, email, password } = req.body;
+  const {
+    email,
+    password,
+    profile_image,
+    username,
+    address,
+    nick_name,
+    cont_no,
+    nid_image,
+    licence_image,
+    role,
+    isEmailVarified,
+    isPhoneVarified,
+    dob,
+    gender,
+  } = req.body;
   try {
+    const userinfo = [
+      {
+        profile_image,
+        username,
+        address,
+        nick_name,
+        cont_no,
+        nid_image,
+        licence_image,
+        role,
+        isEmailVarified,
+        isPhoneVarified,
+        dob,
+        gender,
+      },
+    ];
+    console.log(userinfo);
+
     const isExist = await userModel.findOne({ email: email });
     if (isExist) return res.status(400).json({ msg: "user already exist" });
+
     const passHashed = await bcrypt.hash(password, 7);
     const payload = await userModel.create({
       userinfo,
       email,
       password: passHashed,
     });
+
     const token = jwt.sign(
       { email: payload.email, id: payload._id },
       SECRET_KEY,
       { expiresIn: "1h" }
     );
+
     res.status(201).json({ payload, token: token });
   } catch (errors) {
     console.log(errors);
@@ -31,6 +67,7 @@ exports.signin = async (req, res) => {
   try {
     const isExist = await userModel.findOne({ email: email });
     if (!isExist) return res.status(404).json({ msg: "user not registered" });
+
     const matchPassHashed = await bcrypt.compare(password, isExist.password);
     if (!matchPassHashed)
       return res.status(400).json({ msg: "wrong password" });
@@ -40,6 +77,7 @@ exports.signin = async (req, res) => {
       SECRET_KEY,
       { expiresIn: "1h" }
     );
+
     res.status(201).json({ isExist, token: token });
   } catch (errors) {
     console.log(errors);
